# simpledatatabletk

./: LICENSE  README.md  pyproject.toml  test.py
simpledatatabletk/: __init__.py  datatable.py
simpledatatabletk/tests/: simpledatatabletk_test.py
simpledatatabletk/tests/testdb/: Base-de-pruebas.db
simpledatatabletk/utilities/: adapters.py
